--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1715,6 +1715,59 @@ animation-delay: 0.7s;
     //     width: 350px;
     // }
 
+    .co-m {
+        margin-top: 2em;
+    }
+
+    .supporting-co-column-1 {
+        padding: 10px !important;
+        height: auto;
+    }
+
+    .co-sup-image {
+        margin-top: 4em;
+    }
+
+    .supporting-description.assembly-descript > .supporting-assembly-column {
+        height: auto;
+        padding: 5px 15px 5px 15px !important;
+    }
+
+    h1.fade-in.sup-context {
+        text-align: center;
+        font-size: 130%;
+        line-height: 130%;
+        margin-top: 2em;
+        font-weight: 600;
+    }
+
+    h3.fade-in.sup-context.margin-top-6.mobile {
+        margin-top: 20px !important;
+        line-height: 170%;
+    }
+
+    .supporting-pl-column {
+        height: auto;
+        padding: 5px 15px 5px 15px !important;
+    }
+
+    .supporting-center {
+        padding-bottom: 40px;
+    }
+
+    .product-header {
+        font-size: 175%;
+    }
+
+    small, .small {
+        font-size: 100%;
+    }
+
+    .container-fluid {
+        height: auto;
+        padding-top: 0px;
+    }
+
     .row.light.not {
         visibility: hidden;
         display: none;
@@ -1723,7 +1776,11 @@ animation-delay: 0.7s;
     p.supporting-product-description.fade-in.larger-font.sup-context.top-padding-7.mobile {
         padding-top: 2em !important;
         font-size: 130%;
-        line-height: 120%;
+        line-height: 125%;
+        font-weight: 200;
+        letter-spacing: 2px;
+        padding-left: 15px;
+        padding-right: 15px;
     }
 
     .supporting-description.assembly-descript > .supporting-assembly-column {
@@ -1748,15 +1805,15 @@ animation-delay: 0.7s;
 
     p.supporting-product-description.fade-in.sup-context.no-top-padding.mobile.pl-support {
         border-top: none;
-        font-size: 80%;
+        font-size: 100%;
         line-height: 110%;
         padding-top: 0px;
         margin-top: 0px;
     }
 
     p.supporting-product-description.fade-in.sup-context.padding-top-25.mobile.pl-support {
-        font-size: 80%;
-        margin-top: 75%;
+        font-size: 100%;
+        margin-top: 40%;
         line-height: 120%;
     }
 
@@ -1764,19 +1821,19 @@ animation-delay: 0.7s;
         margin-top: 5em;
     }
 
-    .co-sup-image {
-        margin-top: 4.2em;
-    }
-
-    .co-m {
-        margin-top: 3em;
-    }
-
-    .supporting-co-column-1 {
-        position: relative;;
-        margin-left: auto;
-        margin-right: auto;
-    }
+    // .co-sup-image {
+    //     margin-top: 4.2em;
+    // }
+    //
+    // .co-m {
+    //     margin-top: 3em;
+    // }
+    //
+    // .supporting-co-column-1 {
+    //     position: relative;;
+    //     margin-left: auto;
+    //     margin-right: auto;
+    // }
 
     .col-xs-12.col-sm-12.col-md-6.col-lg-6.padding-left-right-20 {
         padding-bottom: 15px;
@@ -1804,9 +1861,9 @@ animation-delay: 0.7s;
     }
 
     .bulk-action-container {
-        height: 400px;
+        height: auto;
         border-top: 2px groove black;
-        margin-top: 25px;
+        margin-top: 45px;
     }
 
     .action.tape-action-container {
@@ -1919,7 +1976,7 @@ animation-delay: 0.7s;
     }
 
     .footer-background {
-        height: 860px;
+        height: auto;
         padding-top: 20px
     }
 
@@ -1929,6 +1986,60 @@ animation-delay: 0.7s;
 }
 
 @media (max-device-width : 425px) and (min-device-width : 376px) {
+
+    .co-m {
+        margin-top: 2em;
+    }
+
+    .supporting-co-column-1 {
+        padding: 10px !important;
+        height: auto;
+    }
+
+    .co-sup-image {
+        margin-top: 3em;
+    }
+
+    .supporting-description.assembly-descript > .supporting-assembly-column {
+        height: auto;
+        padding: 5px 15px 5px 15px !important;
+    }
+
+    h1.fade-in.sup-context {
+        text-align: center;
+        font-size: 130%;
+        line-height: 130%;
+        margin-top: 2em;
+        font-weight: 600;
+    }
+
+    h3.fade-in.sup-context.margin-top-6.mobile {
+        margin-top: 20px !important;
+        line-height: 170%;
+    }
+
+    .supporting-pl-column {
+        height: auto;
+        padding: 5px 15px 5px 15px !important;
+    }
+
+    .supporting-center {
+        padding-bottom: 40px;
+    }
+
+    .product-header {
+        font-size: 175%;
+    }
+
+    small, .small {
+        font-size: 100%;
+    }
+
+    .container-fluid {
+        height: auto;
+        padding-top: 0px;
+    }
+
     .tape-action-container {
         height: 335px;
     }
@@ -1945,7 +2056,7 @@ animation-delay: 0.7s;
 
     p.supporting-product-description.fade-in.larger-font.sup-context.top-padding-7.mobile {
         padding-top: 2em !important;
-        font-size: 130%;
+        font-size: 150%;
         line-height: 120%;
     }
 
@@ -1966,19 +2077,22 @@ animation-delay: 0.7s;
 
     .col-xs-12.col-sm-12.col-md-6.col-lg-6.supporting-co-column-1 > center.supporting-center-co > h2.supporting-product-description.fade-in.sup-context.mobile {
         border-top: none;
-        margin-top: 0;
+        margin-top: 10px;
+        text-align: center;
+        letter-spacing: 2px;
     }
 
     p.supporting-product-description.fade-in.sup-context.no-top-padding.mobile.pl-support {
         border-top: none;
-        font-size: 80%;
+        font-size: 100%;
         line-height: 110%;
         padding-top: 0px;
         margin-top: 0px;
     }
 
     p.supporting-product-description.fade-in.sup-context.padding-top-25.mobile.pl-support {
-        font-size: 80%;
+        padding-top: 40px !important;
+        font-size: 100%;
         margin-top: 37%;
         line-height: 120%;
     }
@@ -1987,19 +2101,19 @@ animation-delay: 0.7s;
         margin-top: 4em;
     }
 
-    .co-sup-image {
-        margin-top: 0.2em;
-    }
-
-    .co-m {
-        margin-top: 1em;
-    }
-
-    .supporting-co-column-1 {
-        position: relative;;
-        margin-left: auto;
-        margin-right: auto;
-    }
+    // .co-sup-image {
+    //     margin-top: 0.2em;
+    // }
+    //
+    // .co-m {
+    //     margin-top: 1em;
+    // }
+    //
+    // .supporting-co-column-1 {
+    //     position: relative;;
+    //     margin-left: auto;
+    //     margin-right: auto;
+    // }
 
     .product-header {
         font-size: 2em;
@@ -2035,9 +2149,9 @@ animation-delay: 0.7s;
     }
 
     .bulk-action-container {
-        height: 400px;
+        height: auto;
         border-top: 2px groove black;
-        margin-top: 25px;
+        margin-top: 50px;
     }
 
     .action.tape-action-container {
@@ -2102,6 +2216,7 @@ animation-delay: 0.7s;
 
     header {
         visibility: hidden !important;
+        display: none !important;
     }
 
     .header-img {
@@ -2126,6 +2241,7 @@ animation-delay: 0.7s;
 
     #head {
         visibility: hidden !important;
+        display: none !important;
     }
 
     .list-inline {
@@ -2142,7 +2258,7 @@ animation-delay: 0.7s;
     }
 
     .footer-background {
-        height: 860px;
+        height: auto;
         padding-top: 20px
     }
 
@@ -2152,11 +2268,65 @@ animation-delay: 0.7s;
 }
 
 @media (max-device-width : 768px) and (min-device-width : 426px) {
-    h3.fade-in.sup-context.margin-top-6.mobile, p.supporting-product-description.fade-in.sup-context.mobile.smaller-font {
+
+    .co-m {
+        margin-top: 7em;
+    }
+
+    .supporting-co-column-1 {
+        padding: 10px !important;
+        height: auto;
+    }
+
+    .co-sup-image {
+        margin-top: 10.2em;
+    }
+
+    .supporting-description.assembly-descript > .supporting-assembly-column {
+        height: auto;
+        padding: 5px 15px 5px 15px !important;
+    }
+
+    h1.fade-in.sup-context {
+        text-align: center;
+        font-size: 130%;
+        line-height: 130%;
+        margin-top: 2em;
+        font-weight: 600;
+    }
+
+    // h3.fade-in.sup-context.margin-top-6.mobile {
+    //     margin-top: 20px !important;
+    //     line-height: 170%;
+    // }
+
+    .supporting-pl-column {
+        height: auto;
+        padding: 5px 15px 5px 15px !important;
+    }
+
+    .supporting-center {
+        padding-bottom: 40px;
+    }
+
+    .product-header {
+        font-size: 175%;
+    }
+
+    small, .small {
+        font-size: 100%;
+    }
+
+    h3.fade-in.sup-context.margin-top-6.mobile  {
         padding-top: 20px;
         line-height: 28px;
         padding-left: 40px;
         padding-right: 40px;
+        text-align: center;
+    }
+
+    p.supporting-product-description.fade-in.sup-context.mobile.smaller-font {
+        text-align: left;
     }
 
     .tape-action-container {
@@ -2181,7 +2351,7 @@ animation-delay: 0.7s;
     p.supporting-product-description.fade-in.larger-font.sup-context.top-padding-7.mobile {
         text-align: center;
         padding-top: 2em !important;
-        font-size: 130%;
+        font-size: 150%;
         line-height: 120%;
     }
 
@@ -2189,12 +2359,12 @@ animation-delay: 0.7s;
         height: auto;
     }
 
-    h1.fade-in.sup-context {
-        text-align: center;
-        font-size: 130%;
-        line-height: 130%;
-        margin-top: 2em;
-    }
+    // h1.fade-in.sup-context {
+    //     text-align: center;
+    //     font-size: 130%;
+    //     line-height: 130%;
+    //     margin-top: 2em;
+    // }
 
     .assembly-action {
         height: auto !important;
@@ -2214,14 +2384,14 @@ animation-delay: 0.7s;
 
     p.supporting-product-description.fade-in.sup-context.no-top-padding.mobile.pl-support {
         border-top: none;
-        font-size: 80%;
+        font-size: 100%;
         line-height: 110%;
         padding-top: 0px;
         margin-top: 0px;
     }
 
     p.supporting-product-description.fade-in.sup-context.padding-top-25.mobile.pl-support {
-        font-size: 80%;
+        font-size: 100%;
         margin-top: 4em;
         line-height: 120%;
     }
@@ -2230,20 +2400,20 @@ animation-delay: 0.7s;
         margin-top: 0em;
     }
 
-    .co-sup-image {
-        margin-top: 4.2em;
-    }
+    // .co-sup-image {
+    //     margin-top: 4.2em;
+    // }
 
-    .co-m {
-        margin-top: 3em;
-    }
-
-    .supporting-co-column-1 {
-        position: relative;;
-        margin-left: auto;
-        margin-right: auto;
-        padding: 10px !important;
-    }
+    // .co-m {
+    //     margin-top: 3em;
+    // }
+    //
+    // .supporting-co-column-1 {
+    //     position: relative;;
+    //     margin-left: auto;
+    //     margin-right: auto;
+    //     padding: 10px !important;
+    // }
 
     .product-header {
         font-size: 2em;
@@ -2279,9 +2449,9 @@ animation-delay: 0.7s;
     }
 
     .bulk-action-container {
-        height: 400px;
+        height: auto;
         border-top: 2px groove black;
-        margin-top: 25px;
+        margin-top: 50px;
     }
 
     .action.tape-action-container {
@@ -2392,7 +2562,7 @@ animation-delay: 0.7s;
     }
 
     .footer-background {
-        height: 860px !important;
+        height: auto !important;
         padding-top: 20px
     }
 
@@ -2409,6 +2579,66 @@ animation-delay: 0.7s;
 // }
 
 @media (max-device-width : 1024px) and (min-device-width : 769px) {
+
+    p.supporting-product-description.fade-in.sup-context.mobile.m1024.smaller-font {
+        display: block;
+    }
+
+    .supporting-center {
+        padding-bottom: 10px;
+    }
+
+    p.supporting-product-description.fade-in.sup-context.no-top-padding.mobile.no-border-or-margin {
+        display: block;
+        line-height: 24px;
+        margin-bottom: 30px;
+        margin-top: 30px;
+    }
+
+    h1.fade-in.sup-context.mobile {
+        padding-top: 45px;
+        line-height: 100%;
+        font-size: 35px;
+    }
+
+    p.supporting-product-description.fade-in.larger-font.sup-context.top-padding-7.mobile {
+        display: block;
+        border-top: none;
+    }
+
+    h2.supporting-product-description.fade-in.sup-context.mobile {
+        border-top: none;
+    }
+
+    p.supporting-product-description.fade-in.sup-context.mobile2 {
+        display: block;
+    }
+
+    .mobile2 {
+        display: block;
+        visibility: visible !important;
+    }
+
+    p.fade-in.sup-context {
+        display: none;
+    }
+
+    p.supporting-product-description.fade-in.sup-context.no-top-padding.mobile.pl-support {
+        display: block;
+        border-top: none !important;
+    }
+
+    p.supporting-product-description.fade-in.sup-context.padding-top-25.mobile.pl-support {
+        display: block;
+        margin-top: 10px;
+        border-top: none !important;
+    }
+
+    .row.light.not {
+        visibility: hidden;
+        display: none;
+    }
+
     h3.fade-in.sup-context.margin-top-6.mobile, p.supporting-product-description.fade-in.sup-context.mobile.smaller-font {
         // padding-top: 20px;
         line-height: 20px;
@@ -2467,7 +2697,7 @@ animation-delay: 0.7s;
     .bulk-action-container {
         height: auto;
         border-top: 2px groove black;
-        margin-top: 25px;
+        margin-top: 0px;
     }
 
     .action.tape-action-container {
